NewArchive/a5442f12a27d6ba90ea08bb006ed7198-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:16:1: error: expected ';' after class definition
 }
 ^
main.cpp: In instantiation of 'class handle<int>':
main.cpp:19:17:   required from here
main.cpp:13:36: error: no type named 'handle_type' in 'struct default_handle_deleter<int>'
  typedef typename TDx::handle_type handle_type;
                                    ^
